# objectTracking

./: README.md
camshift/: CMakeLists.txt  package.xml  start.launch
camshift/include/camshift/: init.h
camshift/src/: listener.cpp  publish.cpp
